feat: teams models implemented

--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -3,19 +3,14 @@ FROM node:16.14-alpine
 # Mudar para o diretório de trabalho /app-backend
 WORKDIR /app-backend
 # Copiar os package.json, package-lock.json e packages.npm para o container
-COPY --chown=node:node package*.json ./
+COPY package*.json ./
 # Instalar as dependências Node
 RUN npm install
 # Copiar o restante dos arquivos da aplicação para o container
-COPY --chown=node:node src src
-COPY --chown=node:node .editorconfig .
-COPY --chown=node:node .eslintignore .
-COPY --chown=node:node .eslintrc.json .
-COPY --chown=node:node .sequelizerc .
-COPY --chown=node:node tsconfig.json .
+COPY . .
 # Sinalize que aplicação expõe a porta 3001
 EXPOSE 3001
 # Configurar os comandos para iniciar a aplicação de acordo com as boas práticas
-ENTRYPOINT [ "npm run" ]
+# ENTRYPOINT [ "npm run" ]
 # Dica: Leia a seção Docker e Docker-compose no README para mais informações
-CMD ["start"]
+CMD ["npm", "run", "start"]
